# SLAMStudy

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Eg01_Eigen/: CMakeLists.txt  main.cpp
Eg01_UseEigen/: CMakeLists.txt  main.cpp
Eg02_UseGeometry/: CMakeLists.txt  main.cpp
Eg03_UseSophus/: CMakeLists.txt  main.cpp
Eg04_JoinMap/: CMakeLists.txt  main.cpp
Eg05_UseCeres/: CMakeLists.txt  main.cpp
Eg06_UseG2O/: CMakeLists.txt  main.cpp
Eg07_FeatureDetectMatch/: CMakeLists.txt  main.cpp
Eg08_PoseEstimation2D2D/: CMakeLists.txt  main.cpp
Eg09_PoseEstimation3D2D/: CMakeLists.txt  main.cpp
Eg09_Triangulation/: CMakeLists.txt  main.cpp
Eg10_PoseEstimation3D2D/: CMakeLists.txt  main.cpp
Eg10_PoseEstimation3D3D/: CMakeLists.txt  main.cpp
Eg11_PoseEstimation3D3D/: CMakeLists.txt  main.cpp
Eg11_Triangulation/: CMakeLists.txt  main.cpp
Eg15_BagOfWords/: CMakeLists.txt  main.cpp
Sphere/: CMakeLists.txt  plot_sphere.py
Sphere/Sphere01_CeresQuaternion/: CMakeLists.txt  PoseGraph3DErrorTerm.h  main.cpp  types.h
Sphere/Sphere02_CeresQuaternion/: CMakeLists.txt  PoseGraph3DErrorTerm.h  main.cpp
Sphere/Sphere03_CeresSO3/: CMakeLists.txt  PoseGraph3DErrorTerm.h  SO3Parameterization.h  main.cpp  types.h
Sphere/Sphere04_CeresSO3/: CMakeLists.txt  PoseGraph3DErrorTerm.h  SO3Parameterization.h  main.cpp  types.h
Sphere/Sphere05_CeresSE3/: CMakeLists.txt  PoseGraph3DErrorTerm.h  SE3Parameterization.h  main.cpp  types.h
Sphere/Sphere06_CeresPoseParameterization/: CMakeLists.txt  G2OReader.h  PoseGraph3DErrorTerm.h  PoseParameterization.h  main.cpp  types.h
cmake/: FindCSparse.cmake  FindSophus.cmake
common/: Common.hpp
g2o01_CurveFit/: CMakeLists.txt  main.cpp
g2o02_CircleFit/: CMakeLists.txt  main.cpp
